--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-android:background="@drawable/butbg"
+    android:background="@drawable/butbg"
     tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/relativeLayout">
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/welcome"
-        android:gravity="center"
+        android:id="@+id/relativeLayout">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome"
+            android:gravity="center"
 
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
 
-        android:textSize="25sp"
-        />
+            android:textSize="25sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
 
     <Button
         android:layout_width="wrap_content"
