--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -78,8 +78,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shopicon"
-                android:visibility="invisible"
+                android:visibility="visible"
                 android:id="@+id/hatav" />
 
             <TextView
