--- a/TeacherFox/app/src/main/res/layout/resultscreen.xml
+++ b/TeacherFox/app/src/main/res/layout/resultscreen.xml
@@ -25,39 +25,39 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="+00$"
         android:id="@+id/gotMoney"
-        android:layout_marginBottom="66dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/txRes"
-        android:layout_alignEnd="@+id/txRes" />
+        android:layout_above="@+id/relativeLayout3"
+        android:layout_centerHorizontal="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="250dp"
+        android:layout_height="300dp"
         android:id="@+id/imageView5"
-        android:src="@drawable/foxx"
-        android:layout_margin="20dp"
+        android:background="@drawable/foxx"
         android:layout_below="@+id/txRes"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/gotMoney" />
+        android:layout_centerHorizontal="true">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:id="@+id/hatavr" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:background="@drawable/botaoorgmd"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/imageView5"
-        android:layout_marginTop="40dp"
-        android:layout_alignLeft="@+id/txRes"
-        android:layout_alignStart="@+id/txRes"
-        android:layout_alignRight="@+id/gotMoney"
+        android:layout_width="200dp"
+        android:layout_height="75dp"
         android:onClick="returnToMenu"
-        android:layout_alignEnd="@+id/gotMoney">
-
+        android:id="@+id/relativeLayout3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+        fm
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Menu"
+            android:textStyle="bold"
+
             android:id="@+id/textView4"
             android:textSize="35sp"
             android:layout_centerVertical="true"
